# pavement-rover

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_CN.md  app.c  app_c.txt  app_c2.txt  app_c3.txt  compile_commands.json  gd32_bridge_arm  obstacle_avoid_demo.cpp  rc_receiver  rc_receiver_arm  rc_receiver_main.cpp  readme_jayce.md  receive.py  requirements_jayce.md  run_all.sh  run_rc_receiver.sh  sender_main.c  start_vehicle.sh  test_control.cpp  test_drive.cpp  test_live_gps.cpp  test_static_gps.cpp  数据帧格式说明.txt
.claude/: settings.json
build_imx6ull/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_imx6ull/.cache/clangd/index/: AlignedBox.h.BC3F2916DE68B036.idx  AngleAxis.h.EE3A440E3469E27D.idx  Array.h.6E2012EEF3FE4379.idx  ArrayBase.h.972496F822585A19.idx  ArrayCwiseBinaryOps.h.AE6DD24392373908.idx  ArrayCwiseUnaryOps.h.85EA5B705EE6B7D0.idx  ArrayWrapper.h.B12EF3BFA2F96965.idx  Assign.h.21778A8F6C8ECEA7.idx  AssignEvaluator.h.C8A6AC7578D7B4A0.idx  AssignmentFunctors.h.40E4847BA28CD42E.idx  BDCSVD.h.AF43A9ACF2CF834D.idx  BandMatrix.h.791CB86BC763DFB4.idx  BinaryFunctors.h.EF5BFEB2834DA782.idx  BlasUtil.h.F3C7DEF2374D5203.idx  Block.h.BFED5E6016E451B1.idx  BlockHouseholder.h.B60F30444ED82946.idx  BlockMethods.h.403647627878D626.idx  BooleanRedux.h.004074B310AD51A2.idx  Cholesky.85817BD67137DBED.idx  ColPivHouseholderQR.h.6895E05A74B1EA6B.idx  CommaInitializer.h.5C50EE846A74489D.idx  CommonCwiseBinaryOps.h.E687724652C4C417.idx  CommonCwiseUnaryOps.h.0AC9774AC55C9DDB.idx  CompleteOrthogonalDecomposition.h.16E83D0574FD479A.idx  Complex.h.B86BCCEAD39703F4.idx  ComplexEigenSolver.h.F4F8C1066223B1CF.idx  ComplexSchur.h.5F5C775558929037.idx  ConditionEstimator.h.2088D17CB9D5D767.idx  ConjHelper.h.5754DE3ED95D1F3C.idx  Constants.h.C7B12D8B229B16E9.idx  Core.4402D387D7EFBF8D.idx  CoreEvaluators.h.15B5BCC11535EB4F.idx  CoreIterators.h.4FAD1CA3DCFF011A.idx  CwiseBinaryOp.h.D91ACDEF6D4F08A3.idx  CwiseNullaryOp.h.86C71F4D8E841B0A.idx  CwiseTernaryOp.h.1E8A75F47BC875F3.idx  CwiseUnaryOp.h.2F80F8AE83E9586D.idx  CwiseUnaryView.h.49660D60190D5377.idx  Dense.70A68F73EFD901CB.idx  DenseBase.h.4903438008BFF30C.idx  (+915 more)
build_imx6ull/gd32_bridge/: Makefile  cmake_install.cmake
cmake/: arm-toolchain.cmake  toolchain-imx6ull.cmake
config/: kf-gins-test.yaml  kf-gins.yaml  obstacle_avoid_demo.yaml  rc_receiver.yaml
dataset/: kf-gins.yaml  kf2.yaml
docs/: crack_stop_flow.md
docs/superpowers/specs/: 2026-05-26-gd32-image-bridge-design.md
gd32_bridge/: CMakeLists.txt  frame_queue.h  gps_receiver.cpp  gps_receiver.h  main.cpp  protocol.h  tcp_image_packet_test.cpp  tcp_image_test_packet.cpp  tcp_image_test_packet.h  tcp_image_test_sender.cpp  tcp_sender.cpp  tcp_sender.h  uart_reader.cpp  uart_reader.h  usb_cdc_reader.cpp  usb_cdc_reader.h  vehicle_cmd.h  vehicle_cmd_publisher.cpp  vehicle_cmd_publisher.h
src/: kf_gins.cpp
src/common/: types.h
src/kf-gins/: gi_engine.cpp  gi_engine.h
src/path_control/: gnss_path_control_main.cpp  gps_publisher.cpp  gps_publisher.h  path_control_main.cpp  path_controller.cpp  path_controller.h  vehicle_cmd_listener.cpp  vehicle_cmd_listener.h
src/realtime/: realtime.cpp  realtime.h
